<resources>
    <string name="app_name">Un dia para dar</string>
    <string name="hashtag_un_dia_para_dar">#undiaparadar</string>
    <string name="facebook_app_id">877005669054245</string>
    <string name="map">Mapa</string>
    <string name="topics">Inicio Encuentra que DAR</string>
    <string name="topic">Topics</string>
    <string name="statistics">Estadisticas</string>
    <string name="achievements">Mis Logros</string>
    <string name="what_is_udpd">Que es UDPD</string>
    <string name="terms_and_conditions">Términos y Condiciones</string>
    <string name="find_what_to_give">Encuentra que dar</string>
    <string name="adopcion_mascotas">Mascotas</string>
    <string name="asesor_directorio">Asesor directorio</string>
    <string name="donante_de_medula_osea">Medula osea</string>
    <string name="donar_alimentos">Alimentos</string>
    <string name="donar_articulos_usados">Articulos usados</string>
    <string name="donar_dinero">Dinero</string>
    <string name="donar_leche_materna">Leche</string>
    <string name="donar_millas_aereas">Millas</string>
    <string name="donar_pelo">Pelo</string>
    <string name="donar_plaquetas">Plaquetas</string>
    <string name="donar_sangre">Sangre</string>
    <string name="donar_telefonos_moviles">Celulares</string>
    <string name="formarse_para_ayudar">Formarse para ayudar</string>
    <string name="plantar_arboles">Plantar arboles</string>
    <string name="publicacion_de_calle">Publicacion de calle</string>
    <string name="reutilizar">Reutilizar</string>
    <string name="voluntariado">Voluntariado</string>
    <string name="go_to_map">Ir al mapa</string>
    <string name="empty_topics">Debes seleccionar al menos un topic</string>
    <string name="profile">Perfil</string>
    <string name="edit_filter">Editar filtro</string>
    <string name="save_filter">Guardar filtro</string>
    <string name="last_pledge">Ultimos compromisos</string>
    <string name="select_one_topic">Debes seleccionar por lo menos un topic</string>
    <string name="radius_covered">%1$s km</string>
    <string name="radius">Radio</string>
    <string name="select_all">Todos</string>
    <string name="unselect_all">Ninguno</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="select_one_topic_and_radius">Debes seleccionar por lo menos un topic
        y el radio debe ser mayor que cero</string>
    <string name="location_permission">No podremos ubicarte en el mapa</string>
    <string name="retry">Reintentar</string>
    <string name="enable_gps">Habilite el GPS</string>
    <string name="generic_error">Ocurrió un problema</string>
    <string name="no_connection">No hay conexión a internet</string>
    <string name="detail">Detalle</string>
    <string name="positive_actions_total">Compromisos totales</string>
    <string name="positive_actions_done">Compromisos realizados</string>
    <string name="sit_relax_verification">Siéntese y relájese! Mientras verificamos
        su código de compromiso</string>
    <string name="code_instruction">(Ingrese el código que le proporcionaron despues
        de realizar su compromiso)</string>
    <string name="code_hint">Código</string>
    <string name="verification_submit">Enviar</string>
    <string name="participate">Yo participo</string>
    <string name="want_pledge">¿Quieres comprometerte con esta acción?</string>
    <string name="pledge_description">Te enviaremos recordatorios, a medida la fecha de compromiso se acerca</string>
    <string name="pledge_action">Me comprometo</string>
    <string name="keep_looking">Seguir buscando</string>
    <string name="pledge_verification">Confirmación de compromiso</string>
    <string name="date">Fecha:</string>
    <string name="schedule">Horario:</string>
    <string name="parse_application_id">EQYn0fafGF0NFi7IyZDBzBUKWcewFKI6SsiMUIe8</string>
    <string name="parse_client_key">9nii0zRFoSxyzyspa1bqihXzdbaYAF561twEbB2j</string>
    <string name="pledges_done">Cumplido</string>
    <string name="pledges_neutral">Pendiente</string>
    <string name="pledges_failed">Fallados</string>
    <string name="total">Total</string>
</resources>
