<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 android:id="@+id/coordinatorLayout"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background_general"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/m12.5"
            android:layout_height="@dimen/m12.5"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/sit_relax_verification"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center_horizontal"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/code_instruction"
            android:textColor="@color/gray"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/input_code"
            android:layout_width="@dimen/m16.25"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_border"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:hint="@string/code_hint"
            android:inputType="text"
            android:maxLength="6"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn_verify_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@color/light_blue"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/verification_submit"
            android:textColor="@android:color/white"
            android:textSize="14dp"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>