<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_general"
    >

    <LinearLayout
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/m2"
        android:layout_marginLeft="@dimen/m0.5"
        android:layout_marginTop="@dimen/m0.5">

        <Button
            android:id="@+id/accept"
            android:layout_width="@dimen/m16.25"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/m1"
            android:background="@drawable/button_enable_disabled_inverted"
            android:text="@string/accept"
            android:textColor="@color/enable_disable_button_text_inverted"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="@dimen/m16.25"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/m3"
            android:background="@drawable/button_enable_disabled_inverted"
            android:text="@string/cancel"
            android:textColor="@color/enable_disable_button_text_inverted"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/continue_button"
        android:orientation="vertical"
        android:paddingLeft="@dimen/m1.25"
        android:paddingRight="@dimen/m1.25">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/m2.5">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/m1.25">

                <TextView
                    android:id="@+id/radius_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radius"
                    android:textColor="@color/enable_disable_textview"
                    android:textSize="16sp"/>

                <Switch
                    android:id="@+id/radius_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:checked="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/seek_bar_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m2.5"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/radius_seek_bar"
                    android:layout_width="@dimen/m25"
                    android:layout_height="wrap_content"
                    android:max="@integer/max_km"
                    android:maxHeight="@dimen/m0.25"
                    android:progressDrawable="@drawable/progress"/>

                <TextView
                    android:id="@+id/radius_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/enable_disable_textview"
                    tools:text="1000 km"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/m2.5">

            <TextView
                android:id="@+id/topics_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/m1.25"
                android:text="@string/topic"
                android:textColor="@color/enable_disable_textview"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/m0.5"
                android:layout_marginTop="@dimen/m3">

                <Button
                    android:id="@+id/select_all"
                    android:layout_width="@dimen/m16.25"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/m1"
                    android:background="@drawable/button_enable_disabled"
                    android:text="@string/select_all"
                    android:textColor="@color/enable_disable_button_text"
                    android:textSize="12sp"/>

                <Button
                    android:id="@+id/unselect_all"
                    android:layout_width="@dimen/m16.25"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/m3"
                    android:background="@drawable/button_enable_disabled"
                    android:text="@string/unselect_all"
                    android:textColor="@color/enable_disable_button_text"
                    android:textSize="12sp"/>
            </LinearLayout>

            <GridView
                android:id="@+id/grid_topics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:columnWidth="@dimen/m5"
                android:horizontalSpacing="@dimen/m2"
                android:numColumns="auto_fit"
                android:padding="@dimen/m1"
                android:verticalSpacing="@dimen/m0.5"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
