<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/root_scroll"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/profile_menu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m25"
            android:background="@drawable/red_background_white"
            android:orientation="vertical">

            <itba.undiaparadar.utils.CircularNetworkImageView
                android:id="@+id/profile_img"
                android:layout_width="@dimen/m12.5"
                android:layout_height="@dimen/m12.5"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/m4"
                android:layout_marginTop="@dimen/m2"
                android:scaleType="centerInside"
                android:background="@drawable/menu_profile_placeholder"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/m4"
                android:layout_marginTop="@dimen/m2"
                android:background="@color/alpha_black">

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/m2"
                    android:layout_marginRight="@dimen/m2"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:singleLine="false"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/topics_menu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m4"
            android:layout_marginBottom="@dimen/m2"
            android:layout_marginLeft="@dimen/m2"
            android:layout_marginRight="@dimen/m2"
            android:layout_marginTop="@dimen/m2"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/m4"
                android:layout_height="@dimen/m4"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/m2"
                android:scaleType="centerInside"
                android:src="@drawable/find_what_to_give"/>

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/m1"

                android:lineSpacingExtra="0dp"
                android:text="@string/topics"
                android:textStyle="bold"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/m2"
            android:layout_marginRight="@dimen/m2"
            android:background="@color/dark_red"/>

        <LinearLayout
            android:id="@+id/map_menu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m4"
            android:layout_marginBottom="@dimen/m2"
            android:layout_marginLeft="@dimen/m2"
            android:layout_marginRight="@dimen/m2"
            android:layout_marginTop="@dimen/m2"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/m4"
                android:layout_height="@dimen/m4"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/m2"
                android:scaleType="centerInside"
                android:src="@drawable/map"/>

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/m1"
                android:lineSpacingExtra="0dp"
                android:text="@string/map"
                android:textStyle="bold"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/m2"
            android:layout_marginRight="@dimen/m2"
            android:background="@color/dark_red"/>

        <LinearLayout
            android:id="@+id/statistics_menu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m4"
            android:layout_marginBottom="@dimen/m2"
            android:layout_marginLeft="@dimen/m2"
            android:layout_marginRight="@dimen/m2"
            android:layout_marginTop="@dimen/m2"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/m4"
                android:layout_height="@dimen/m4"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/m2"
                android:scaleType="centerInside"
                android:src="@drawable/statistics"/>

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/m1"
                android:lineSpacingExtra="0dp"
                android:text="@string/statistics"
                android:textStyle="bold"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/m2"
            android:layout_marginRight="@dimen/m2"
            android:background="@color/dark_red"/>

        <LinearLayout
            android:id="@+id/achievements_menu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m4"
            android:layout_marginBottom="@dimen/m2"
            android:layout_marginLeft="@dimen/m2"
            android:layout_marginRight="@dimen/m2"
            android:layout_marginTop="@dimen/m2"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/m4"
                android:layout_height="@dimen/m4"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/m2"
                android:scaleType="centerInside"
                android:src="@drawable/achievements"/>

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/m1"
                android:lineSpacingExtra="0dp"
                android:text="@string/achievements"
                android:textStyle="bold"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/m2"
            android:layout_marginRight="@dimen/m2"
            android:background="@color/dark_red"/>

        <LinearLayout
            android:id="@+id/what_is_udpd_menu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m4"
            android:layout_marginBottom="@dimen/m2"
            android:layout_marginLeft="@dimen/m2"
            android:layout_marginRight="@dimen/m2"
            android:layout_marginTop="@dimen/m2"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/m4"
                android:layout_height="@dimen/m4"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/m2"
                android:scaleType="centerInside"
                android:src="@drawable/udpd"/>

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/m1"
                android:lineSpacingExtra="0dp"
                android:text="@string/what_is_udpd"
                android:textStyle="bold"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/m2"
            android:layout_marginRight="@dimen/m2"
            android:background="@color/dark_red"/>

        <LinearLayout
            android:id="@+id/term_and_conditions_menu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m4"
            android:layout_marginBottom="@dimen/m2"
            android:layout_marginLeft="@dimen/m2"
            android:layout_marginRight="@dimen/m2"
            android:layout_marginTop="@dimen/m2"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/m4"
                android:layout_height="@dimen/m4"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/m2"
                android:scaleType="centerInside"
                android:src="@drawable/term_conditions"/>

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/m1"
                android:lineSpacingExtra="0dp"
                android:text="@string/terms_and_conditions"
                android:textStyle="bold"/>

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/m2"
            android:layout_marginRight="@dimen/m2"
            android:background="@color/dark_red"/>

    </LinearLayout>


</ScrollView>